test/error/fun_wrong_arity.snek
(fun (add a b) (+ a b))
(add 1)
